<resources>

    <!--MOVIE DATABASE IMPLEMENTATION - ALLISON-->

    <string name="app_name">FlixPix</string>

    <string name="sign_up_button">Sign Up</string>
    <string name="login_button">Login</string>
    <string name="sign_out_button">Sign Out</string>
    <string name="back_button">Back</string>
    <string name="add">Add</string>

    <string name="welcome">Welcome!</string>
    <string name="welcome_msg">Please log in or sign up.</string>

    <string name="email">Email</string>
    <string name="password">Password</string>

    <string name="friends_search">Search for Friends</string>
    <string name="friends_search_clear">Clear Search</string>

    <string name="watch_list">Watch List</string>
    <string name="search_movies">Search Movies</string>
    <string name="add_searched_movie">Add to Watchlist</string>

    <string name="friends_watch_list">Friends Watch List</string>
    <string name="friends_list">Friends List</string>
    <string name="movie_view">( Movie View )</string>

    <!--Strings for movie database implementation - Allison-->
    <string name="popular">Popular</string>
    <string name="most_popular_movies">Most popular movies</string>
    <string name="error_fetch_movies">Please check your internet connection</string>
    <string name="top_rated">Top Rated</string>
    <string name="highest_rated_movies">Highest rated movies of all time</string>
    <string name="upcoming">Upcoming</string>
    <string name="stay_updated">Stay updated with the latest movies</string>


</resources>