<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#234798"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="60dp"
        android:layout_marginBottom="60dp"
        android:background="#fcc139"/>

    <ImageView
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_margin="0dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="30dp"
        android:src="@mipmap/logo_round"/>

    <TextView
        android:id="@+id/top_text_start"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="100dp"
        android:text="@string/welcome"
        android:textColor="#fee09c"
        android:textSize="50sp"
        android:textStyle="bold"/>

    <LinearLayout
        android:id="@+id/activity_start_layout"
        android:paddingRight="30dp"
        android:paddingLeft="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:orientation="vertical">

        <Button
            android:id="@+id/search_movies"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:background="@drawable/rounded_button_blue"
            android:padding="20dp"
            android:text="@string/search_movies"
            android:textColor="#fee09c"
            android:textSize="25sp"
            android:drawableLeft="@drawable/search_icon"/>

        <Button
            android:id="@+id/watch_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:background="@drawable/rounded_button_blue"
            android:padding="20dp"
            android:text="@string/watch_list"
            android:textColor="#fee09c"
            android:textSize="25sp"
            android:drawableLeft="@drawable/watch_icon"/>

        <Button
            android:id="@+id/movie_matcher"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:background="@drawable/rounded_button_blue"
            android:onClick="showFriendsPage"
            android:padding="20dp"
            android:text="@string/friends_list"
            android:textColor="#fee09c"
            android:textSize="25sp"
            android:drawableLeft="@drawable/friend_icon"/>

        <Button
            android:id="@+id/sign_out"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_button_blue"
            android:padding="20dp"
            android:text="@string/sign_out_button"
            android:textColor="#fee09c"
            android:textSize="25sp"
            android:drawableLeft="@drawable/sign_out_icon"/>

    </LinearLayout>

    <include
        android:id="@+id/watch_list_layout"
        android:visibility="gone"
        layout="@layout/activity_watch_list" />

</RelativeLayout>