<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center"
    tools:context=".MainActivity">

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#fcc139"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="25dp"
        android:background="#234798"/>

    <LinearLayout
        android:id="@+id/homepage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:orientation="vertical">

        <TextView
            android:id="@+id/welcome_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/welcome"
            android:textColor="#fcc139"
            android:padding="30dp"
            android:textSize="40sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/welcome_msg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/welcome_msg"
            android:textColor="#fcc139"
            android:padding="8dp"
            android:textSize="20sp"/>

        <Button
            android:id="@+id/login_homepage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:background="@drawable/rounded_button"
            android:textColor="#0e1c3c"
            android:textSize="15sp"
            android:padding="8dp"
            android:text="@string/login_button" />

        <Button
            android:id="@+id/sign_up_homepage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:background="@drawable/rounded_button"
            android:textColor="#0e1c3c"
            android:textSize="15sp"
            android:padding="8dp"
            android:text="@string/sign_up_button" />

    </LinearLayout>

    <include
        android:id="@+id/sign_up_layout"
        android:visibility="gone"
        layout="@layout/sign_up" />

    <include
        android:id="@+id/login_layout"
        android:visibility="gone"
        layout="@layout/login" />

</RelativeLayout>