<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#fcc139"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="25dp"
        android:background="#234798"/>

    <ImageView
        android:layout_width="115dp"
        android:layout_height="115dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="40dp"
        android:src="@mipmap/logo_round"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="107dp"
        android:layout_above="@+id/homepage"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="150dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="0dp"
        android:text="@string/app_name"
        android:fontFamily="sans-serif-smallcaps"
        android:textColor="#fee09c"
        android:textSize="70sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="100dp"
        android:orientation="vertical">

        <!--Sign up Page label-->
        <TextView
            android:id="@+id/welcome_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/sign_up_button"
            android:textColor="#fcc139"
            android:textSize="30sp"
            android:textStyle="bold" />

        <!--Username input text box (to sign up)-->
        <EditText
            android:id="@+id/sign_up_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@drawable/rounded_border"
            android:gravity="center"
            android:hint="@string/email"
            android:padding="8dp"
            android:textColor="#0e1c3c"
            android:textSize="25dp"
            android:drawableLeft="@drawable/email_icon"/>

        <!--Password input text box (to sign up)-->
        <EditText
            android:id="@+id/sign_up_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@drawable/rounded_border"
            android:gravity="center"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="8dp"
            android:textColor="#0e1c3c"
            android:textSize="25dp"
            android:drawableLeft="@drawable/password_icon"/>

        <!--Save button-->
        <Button
            android:id="@+id/sign_up_sign_up"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:background="@drawable/rounded_button_yellow"
            android:padding="8dp"
            android:text="@string/sign_up_button"
            android:textColor="#0e1c3c"
            android:textSize="15sp"
            android:drawableLeft="@drawable/sign_up_icon"/>

        <!--Back button-->
        <Button
            android:id="@+id/back_sign_up"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:background="@drawable/rounded_button_yellow"
            android:padding="8dp"
            android:text="@string/back_button"
            android:textColor="#0e1c3c"
            android:textSize="15sp"
            android:drawableLeft="@drawable/back_button"/>

    </LinearLayout>

</RelativeLayout>